# slim-kt

./: DATA.md  LICENSE  _inspect_questions.py
results/: dbe_kt22_sakt_fold0_bootstrap_cold.json  dbe_kt22_sakt_fold0_bootstrap_overall.json  teacher_cost.json
scripts/: _run_cold_boot.sh  _run_folds.sh  agg_folds.py  autodl_setup.sh  (+17 more)
slim-kt/: README.md  pyproject.toml  requirements.txt
slim-kt/configs/: default.yaml
slim-kt/configs/dataset/: dbe_kt22.yaml  eedi.yaml
slim-kt/docs/: EXPERIMENT_PROTOCOL.md
slim-kt/results/: eedi_sakt_fold0_bootstrap_cold.json  eedi_sakt_fold0_bootstrap_overall.json  folds_summary.json  table_s1.csv  xes3g5m_sakt_fold0_bootstrap_cold.json  xes3g5m_sakt_fold0_bootstrap_overall.json
slim-kt/scripts/: _inspect_options.py  _inspect_runs.sh  _run_analysis.sh  _run_overall_boot.sh  _run_sem_akt.sh  bootstrap_significance.py  download_dbe_kt22.py  download_ednet.py  download_eedi.py  export_table_s1.py  inspect_kc.py  inspect_teacher.py  make_degraded_sem.py  option_recovery.py  plot_resolution.py  preprocess_ednet.sh  preprocess_xes3g5m.sh  rerun_kc_variants_xes.sh  run_core.sh  run_dbe_distill.sh  run_eval.sh  run_smoke_xes.sh  run_supplementary.sh  run_teacher_dbe.sh  run_teacher_xes.sh  smoke_test.sh  summarize_matrix.py  summarize_resolution.py  teacher_cost.py
slim-kt/slimkt/: utils.py
slim-kt/slimkt/data/: __init__.py  cold_start.py
slim-kt/slimkt/data/preprocess/: common.py  dbe_kt22.py  eedi.py
slim-kt/slimkt/models/: backbones.py  factory.py  losses.py
slim-kt/slimkt/teacher/: __init__.py  llm_teacher.py  prompts.py
(+16 files in other folders)
