[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slimkt"
version = "0.1.0"
description = "SLIM-KT: distilling LLM item semantics into a lightweight, cold-start-robust, interpretable knowledge tracing model"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anonymous" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["slimkt*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.ruff]
line-length = 100
